--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 
     <!-- Fontawesome Icons -->
     <script src="https://kit.fontawesome.com/703cfd77f3.js" crossorigin="anonymous"></script>
+
+    <!-- Linking our CSS File -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -155,14 +158,16 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="rounded-circle img-fluid h-100" src="assets/img/git.jpg"></div>
+                    <div class="p-5"><img class="profileImage rounded-circle mx-auto h-100 img-fluid" src="assets/img/git.jpg"></div>
                 </div>
+
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Git Profiles...</h2>
                         <p>Find all the Git Hub profiles with extreme ease, by just searching the username. <br>Here, you will find all the important details of any GitHub profile, such as Repos, Followers, Following, etc...</p>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
