--- a/public/index.html
+++ b/public/index.html
@@ -135,11 +135,11 @@
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Phone Number</label>
 
-                        <input type="password" class="form-control" name="phone" id="phone" placeholder="Phone Number" required>
+                        <input type="number" class="form-control" name="phone" id="phone" placeholder="Phone Number" required>
                     </div>
 
                     <div class="d-flex justify-content-between">
-                        <button type="submit" id="submitDetails" name="submitDetails" value="Submit" class="btn btn-primary">Create Account</button>
+                        <button type="submit" name="submitDetails" value="Submit" class="btn btn-primary">Create Account</button>
         
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="profileImage rounded-circle mx-auto h-100 img-fluid" src="assets/img/git.jpg"></div>
+                    <div class="p-5 d-flex justify-content-center"><img class="profileImage rounded-circle mx-auto " src="assets/img/git.jpg"></div>
                 </div>
 
                 <div class="col-lg-6 order-lg-1">
